# pata-password-cracker

./: BUILD_EXAMPLES.md  MANIFEST.in  README.md  SECURITY.md  TEST_COVERAGE.md  install_nltk_deps.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: codeql-analysis.yml
src/pata-password-cracker/: .__init__.py.swp  __init__.py
src/pata_password_cracker/: __main__.py  categories.py  family_generator.py  gen_logo.py  gen_password.py  input.py  output.py  subsitutor.py
src/pata_password_cracker/encryption/bcrypt/: __init__.py
src/pata_password_cracker/encryption/md5/: __init__.py
src/pata_password_cracker/encryption/sha1/: __init__.py
src/pata_password_cracker/encryption/sha224/: __init__.py
src/pata_password_cracker/encryption/sha256/: __init__.py
src/pata_password_cracker/encryption/sha384/: __init__.py
src/pata_password_cracker/encryption/sha512/: __init__.py
src/pata_password_cracker/generators/: date_name_mixin.py  gen_password.py
src/pata_password_cracker/generators/core_bio/: __init__.py  __main__.py
src/pata_password_cracker/generators/cryptic/: __init__.py
src/pata_password_cracker/generators/family/: __init__.py  family_generator.py
src/pata_password_cracker/generators/fans/: __init__.py
src/pata_password_cracker/generators/fantasists/: __init__.py
src/pata_password_cracker/generators/free_data/: __init__.py
src/pata_password_cracker/substitutors/common/: __init__.py
src/pata_password_cracker/substitutors/simple/: __init__.py
src/pata_password_cracker/substitutors/simplerandom/: __init__.py
tests/: conftest.py  test_categories.py  test_encryption.py  test_gen_logo.py  test_gen_password.py  test_generators.py  test_input.py  test_integration.py  test_main.py  test_output.py  test_substitutors.py
